Fixed horizontal overflows

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 header {
   text-align: center;
 }
